--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "15.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-slick": "^0.30.2",
     "sass": "^1.83.0",
     "slick-carousel": "^1.8.1",
