Added auth for admin dashboard

--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@mui/material": "^6.2.0",
     "@mui/x-date-pickers": "^7.23.2",
     "@types/react-slick": "^0.23.13",
+    "bcryptjs": "^3.0.2",
     "dayjs": "^1.11.13",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.1",
+    "mongoose": "^8.10.2",
     "next": "15.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
