--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "swiper": "^11.1.15"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
