--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.2.0",
     "@mui/x-date-pickers": "^7.23.2",
     "@types/react-slick": "^0.23.13",
+    "axios": "^1.8.1",
     "bcryptjs": "^3.0.2",
     "dayjs": "^1.11.13",
     "jsonwebtoken": "^9.0.2",
@@ -28,7 +29,8 @@
     "react-slick": "^0.30.2",
     "sass": "^1.83.0",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.1.15"
+    "swiper": "^11.1.15",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.9",
