--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "@date-io/dayjs": "^3.0.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.2.0",
     "@mui/material": "^6.2.0",
-    "@mui/x-date-pickers": "^7.23.2",
+    "@mui/x-date-pickers": "^7.23.3",
+    "@mui/x-date-pickers-pro": "^7.27.3",
     "@types/react-slick": "^0.23.13",
     "axios": "^1.8.1",
     "bcryptjs": "^3.0.2",
